[workspace]

members = [
    "mimium-lang",
    "mimium-audiodriver",
    "mimium-cli",
    "mimium-test",
    "mimium-scheduler",
    "mimium-symphonia",
    "mimium-midi",
    "mimium-guitools",
    "mimium-web",
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MPL-2.0"
version = "2.2.3"
repository = "https://github.com/tomoyanonymous/mimium-rs/"
readme = "Readme.md"
authors = ["Tomoya Matsuura <me@matsuuratomoya.com>"]

[workspace.dependencies]
mimium-lang = { path = "mimium-lang", version = "2.2.3" }
mimium-audiodriver = { path = "mimium-audiodriver", version = "2.2.3" }
mimium-midi = { path = "mimium-midi", version = "2.2.3" }
mimium-symphonia = { path = "mimium-symphonia", version = "2.2.3" }
mimium-scheduler = { path = "mimium-scheduler", version = "2.2.3" }
mimium-guitools = { path = "mimium-guitools", version = "2.2.3" }
mimium-web = { path = "mimium-web", version = "2.2.3" }
mimium-test = { path = "mimium-test" }
itertools = "0.13.0"


# do not add git tag for each crates on release.
[workspace.metadata.release]
tag-prefix = ""

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
