[package]
name = "mimium-audiodriver"
version = "2.0.0-alpha-1"
license = "MPL 2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]


[dependencies]
cpal = "0.15.3"
log = "0.4.22"
num-traits = "0.2.19"
ringbuf = "0.4.1"
mimium-lang = {path = "../mimium-lang"}
