[package]
name = "mimium-audiodriver"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "audio driver plugin for mimium"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]


[dependencies]
cpal = "0.15.3"
num-traits = "0.2.19"
ringbuf = "0.4.1"
mimium-lang = { workspace = true }
