[package]
name = "mimium-cli"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]


[dependencies]

clap = { version = "4.5.7", features = ["derive"] }

mimium-lang = { workspace = true }
mimium-audiodriver = { workspace = true }
mimium-midi = { workspace = true }
mimium-symphonia = { workspace = true }
mimium-scheduler = { workspace = true }
mimium-guitools = { workspace = true }
colog = "1.3.0"
