[package]
name = "mimium-guitools"
version = "2.0.0-alpha-1"
license = "MPL 2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]


[dependencies]
egui = "0.29.1"
egui_plot = "0.29.0"
mimium-lang = { path = "../mimium-lang" }
eframe = { version = "0.29.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
ringbuf = "0.4.7"
