[package]
name = "mimium-guitools"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "basic analyzer tool plugin with egui for mimium."

[package.metadata.dist]
dist = false


[dependencies]
egui = "0.29.1"
egui_plot = "0.29.0"
mimium-lang = { workspace = true }
eframe = { version = "0.29.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
ringbuf = "0.4.7"
