[package]
name = "mimium-lang"
version = "2.0.0-alpha-1"
license = "MPL 2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]


[dependencies]

chumsky = { version = "0.9", default-features = false, features = ["std"] }
ariadne = "0.4"
log = "0.4.22"
string-interner = "0.17.0"
slotmap = "1.0.7"
colog = "1.3.0"
half = "2.4.1"
