[package]
name = "mimium-lang"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "mimium(minimal-musical-medium) an infrastructural programming language for sound and music."
readme.workspace = true

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]


[dependencies]

chumsky = { version = "0.9", default-features = false, features = ["std"] }
ariadne = "0.4"
log = "0.4.22"
string-interner = "0.17.0"
slotmap = "1.0.7"
colog = "1.3.0"
half = "2.4.1"
itertools = "0.13.0"
mimalloc = { version = "0.1.43", optional = true }
intx = "0.1.0"
homedir = "0.3.4"

[lints.clippy]
useless_format = "allow"
expect_fun_call = "allow"
