[package]
name = "mimium-scheduler"
version = "2.0.0-alpha-1"
license = "MPL 2.0"
edition = "2021"
description = "basic scheduler implementation as a plugin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]


[dependencies]

mimium-lang = { path = "../mimium-lang" }
symphonia = "0.5.4"
log = "0.4.22"

[dev-dependencies]
mimium-test = { path = "../mimium-test" }
