[package]
name = "mimium-scheduler"
version = "2.0.0-alpha-1"
license = "MPL 2.0"
edition = "2021"
description = "basic scheduler implementation as a plugin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]


[dependencies]

mimium-lang = { path = "../mimium-lang" }

[dev-dependencies]
mimium-test = { path = "../mimium-test" }
