[package]
name = "mimium-test"
version = "2.0.0-alpha-1"
license = "MPL 2.0"
edition = "2021"
description = "Common test modules & basic regression tests for mimium"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]


[dependencies]

mimium-lang = { path = "../mimium-lang" }
mimium-scheduler = {path = "../mimium-scheduler"}
mimium-audiodriver = { path = "../mimium-audiodriver" }
log = "0.4.22"