[package]
name = "mimium-test"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "Common test modules & basic regression tests for mimium"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]

# do not need to publish this crate on crate.io (config for `cargo release`)
[package.metadata.release]
release = false

[dependencies]

mimium-lang = { workspace = true }
mimium-scheduler = { workspace = true }
mimium-audiodriver = { workspace = true }
