[package]
name = "mimium-hir-interpreter"
version = "0.0.1"
license = "MPL 2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../../components/ast", version = "0.0.1", package = "mimium-ast" }
mmmtype = { path = "../../components/type", version = "0.0.1", package = "mimium-type" }
utils = { path = "../../components/utils", version = "0.0.1", package = "mimium-utils" }
hir ={ path = "../../components/hir", package = "mimium-hir"}

parser ={ path = "../../compiler/parser", package = "mimium-parser"}
hirgen ={ path = "../../compiler/hirgen", package = "mimium-hirgen"}
mirgen ={ path = "../../compiler/mirgen", package = "mimium-mirgen"}
builtin_fn = {path = "../builtin_fn", package = "mimium-builtin-fn"}

clap = { version = "3.2.10", features = ["derive"] }
anyhow = "1.0.58"